// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match ArrowDownwardIcon snapshot 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1g0x21s-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  />
</DocumentFragment>
`;

exports[`should match Button snapshot 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1g0x21s-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    text=""
    type="button"
  />
</DocumentFragment>
`;
